--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
   "title": "StepVoca 4-5",
-  "data": "data.txt"
+  "wordsUrl": "https://raw.githubusercontent.com/pchuri/scriptable-words-test/main/words/words5-6.txt"
 }
